Fix <br> tag of Categories/Show.html.erb

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -27,8 +27,8 @@
 					        </div>
 					      </div>
 					    </a>
-					    <br />
-					    <br />
+					    <br class="country-link <%= store.country.short_name %>"/>
+					    <br class="country-link <%= store.country.short_name %>"/>
 				    <% end %>
 			    <% end %>
 			<% else %>
