'Be A Pirate' added to Footer

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,5 +1,5 @@
 <!-- Page title -->
-<% title "Search for '#{@text_of_search} %>'" %>
+<% title "General Search" %>
 
 <div class="panel" id="cinza">
   <div class="row">
