--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -57,8 +57,9 @@
       <%= link_to "Home Page", controller: 'static', action: 'index' %>
       <%= link_to "About", controller: 'static', action: 'about' %>
       <%= link_to "Add a store", new_item_path %>
-      <%= link_to "All categories", categories_path %>
-      <% if false %><%= link_to "Advertise" %><% end %>
+      <%= link_to "Be a Pirate!", "http://en.wikipedia.org/wiki/Pirate_Parties_International", :target => "_blank", :rel => "nofollow" %>
+      <% if false %><%= link_to "All categories", categories_path %>
+      <%= link_to "Advertise" %><% end %>
       <%= link_to "Contact", controller: 'static', action: 'contact' %>
     </div>
   </div>
