--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,9 +3,10 @@
 		<div class="large-12 large-centered text-center columns">
 			<%= link_to "Home Page", controller: 'static', action: 'index' %>
 		    <%= link_to "About", controller: 'static', action: 'about' %>
-		     <%= link_to "Add a store", new_item_path %>
-		    <%= link_to "All categories", categories_path %>
-		    <% if false %><%= link_to "Advertise" %><% end %>
+		    <%= link_to "Add a store", new_item_path %>
+		    <%= link_to "Be a Pirate!", "http://en.wikipedia.org/wiki/Pirate_Parties_International", :target => "_blank", :rel => "nofollow" %>
+		    <% if false %><%= link_to "All categories", categories_path %>
+		    <%= link_to "Advertise" %><% end %>
 		    <%= link_to "Contact", controller: 'static', action: 'contact' %>
 		</div>
 	</div>
