--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,3 +1,20 @@
+<!-- Meta tags -->
+<% set_meta_tags :description => 'The first open-source directory of sites that accept Bitcoin. Find stores and buy with Bitcoin.',
+      :keywords => 'Bitcoin, Directory, Stores, payment, method, sites, accept, btc', 
+      :robots => 'index, follow',
+      :author => ["Fernando Paladini", "Guilherme Passos"],
+      :og => {
+        :title    => "BTC-Stores - Buy with Bitcoins",
+        :type     => 'website',
+        :url      => request.original_url,
+        :site_name => 'BTC-Stores'
+      },
+      :twitter => {
+        :card => "summary",
+        :title => "BTC-Stores - Buy with Bitcoins",
+        :description => "The first open-source directory of sites that accept Bitcoin. Find stores and buy with Bitcoin."
+      }
+  %>
 
 
 <main id="index-main">
