--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   <%= title :site => "BTC-Stores",
+	  
+	  <!-- Page title -->
+	  <%= title :site => "BTC-Stores",
             :separator => "#",
             :reverse => true %>
+
+      <!-- Misc. -->
 	  <%= stylesheet_link_tag "application", media: "all", "data-turbolinks-track" => true %>
 	  <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
 	  <%= csrf_meta_tags %>
+
+	  <!-- Metatags -->
+	  <%= display_meta_tags %>
 	  <meta charset="utf-8" />
 	  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	</head>
