Modified index to show number of stores

--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -60,6 +60,7 @@
             <a href="<%= url_for categories_path + '/miscellaneous' %>">Miscellaneous</a>
             <a href="<%= url_for categories_path + '/home-and-garden' %>">Home & Garden</a>
           </p>
+          <p style="font-size: 14px; color: #eee;">Now we have more than 320 stores in BTC-Stores!</p>
 
         </div>
       </nav>
