--- a/app/assets/stylesheets/categories/categories.css.scss
+++ b/app/assets/stylesheets/categories/categories.css.scss
@@ -1,13 +1,51 @@
-.country{
+.filter-by{
 	background-color: #FFF;
+	height: auto;
+	width: 100%;
+	padding: 7%;
+}
+
+.country-title{
+	font-size: 14px;
+	font-weight: bold;
+}
+
+.country-item{
+	font-size: 14px;
+	margin-bottom: 10px;
+}
+
+.country-item:last-child{
+	font-size: 14px;
+	margin-bottom: 0px;
+}
+
+.country-item a:hover{
+	text-decoration: underline;
+}
+
+.active{
+	/* background-color: #ddd3d3 !important; */
+	font-size: 14px;
+	color: #000;
+}
+
+.active:hover{
+	text-decoration: none !important;
+	color: #000;
+}
+
+/*
+.country{
+	 background-color: #FFF;
 	transition: all 0.2s linear 0.1s;
 	width: 100%;
 	height: auto;
-	padding: 10px;
+	padding: 10px; 
 }
 
 .country:hover{
 	background-color: #ddd3d3;
 	transition: all 0.3s linear 0.1s;
 	border-color: #000;	
-}
+}*/
