--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -35,32 +35,32 @@
 		</ul>
 
 		<br/>
-
-		<div class="large-3 medium-3 columns">
-	    	<div class="filter-by">
-		    	<% if @category.item.size > 0 %>
-			    	<h3>By country: </h3><br/>
-			    	<a href="#" 
-			    		class="country-row all">
-				    		<div class="country all">
-				    			All (<%= @category.item.size %>)
-				    		</div>
-			    		</a>
-
+    	
+    	<% if @category.item.size > 0 %>
+			<div class="large-3 medium-3 columns">
+		    	<div class="filter-by">
+			    	<div class="country-title">By country:</div><br/>
+			    	<div class="country-item">
+				    	<a href="#" 
+				    		class="country-row all">
+					    		<div class="country all">
+					    			All (<%= @category.item.size %>)
+					    		</div>
+				    		</a>
+		    		</div>
 			    	<% @countries.each do |country| %>
-			    		<a href="#" 
-			    		class="country-row <%= country.short_name %>">
-				    		<div class="country <%= country.short_name %>">
-				    			<%= country.name %> (<%= country.item.where("category_id = #{@category.id}").size %>)
-				    		</div>
-			    		</a>
+				    	<div class="country-item">
+				    		<a href="#" 
+					    		class="country-row <%= country.short_name %>">
+					    		<div class="country <%= country.short_name %>">
+					    			<%= country.name %> (<%= country.item.where("category_id = #{@category.id}").size %>)
+					    		</div>
+				    		</a>
+				    	</div>
 			    	<% end %>
-		    	<% end %>
+		    	</div>
 	    	</div>
-	    </div>
-
-	    <div class="large-9 medium-9 columns">
-		    <% if @category.item.size > 0 %>
+		    <div class="large-9 medium-9 columns">
 			    <% @category.item.each do |store| %>
 				    <% if store.isActive == 1 %>
 					    <a href="<%= url_for store.url_shortned %>" 
@@ -72,18 +72,19 @@
 						          </div>
 						          <img src="http://usebitcoins.info/images/artimages/34/online2.jpg"/>
 						          <div class="description">
-						            <%= truncate(store.description, :length => 124) %>
+						            <%= truncate(store.description, :length => 122) %>
 						          </div>
 					      </div>
 					    </a>
 				    <% end %>
 			    <% end %>
-			<% else %>
-				<h5>Wow, seems that we don't have a Store here.</h5>
-				<h5> Try to search <a href="<%= url_for category_path %>">all categories</a> or help us improve the site and <a>add a store</a>.</h5>		
-			<% end %>
-	    </div>
-	    
+		    </div>
+	    <% else %>
+			<div class="large-12 medium-12 small-12 text-center">
+				<h4>Wow, seems that we don't have a Store here.</h4>
+				<h4> Try to search <a href="<%= url_for category_path %>">all categories</a> or help us improve the site and <a>add a store</a>.</h4>	
+			</div>	
+		<% end %>
 	</div>
 </div>
 
@@ -92,7 +93,7 @@
 
 		// Changing the style of the first country ("all")
 		// $(".country").first().css("background-color", "#ddd3d3");
-		$(".country").first().addClass("active");
+		$(".country-row").first().addClass("active");
 
 		// On click in a country
 		$(".country-row").on("click", function(event){
@@ -101,7 +102,7 @@
 			event.preventDefault();
 
 			// Cleaning all background-colors
-			$('.country').removeClass("active");
+			$('.country-row').removeClass("active");
 			// css("background-color","#FFFFFF");
 
 			// Hiding all countries
@@ -119,14 +120,14 @@
 				$(".country-link").show();
 
 				// Changing the style of "all"
-				$(".country").first().addClass("active");
+				$(".country-row").first().addClass("active");
 
 			}else{
 				// Showing the selected country
 				nameOfCountry.valueOf().show();
 
 				// Changing the style of the selected country
-				$(".country." + country).addClass("active");
+				$(".country-row." + country).addClass("active");
 			}	
 		});
 	});
